Fix & cleanup mixins